<?xml version="1.0" encoding="utf-8"?><!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent"--><!--android:orientation="vertical">-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fragment_book_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="16dp"
            android:text="@string/book_title_label"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title_hint"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="16dp"
            android:text="@string/book_author_label"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_author_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_hint"
                android:inputType="textCapWords|textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="16dp"
            android:text="@string/book_details_label"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/book_read"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/book_read_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="16dp"
            android:text="@string/book_note_label"
            android:textSize="22sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/book_note_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/book_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_note_hint"
                android:inputType="textCapSentences|textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="16dp"
            android:text="@string/book_search_label"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <Button
                android:id="@+id/search_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/google" />

            <Button
                android:id="@+id/search_amazon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amazon" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

    <!--</android.support.v7.widget.CardView>-->